// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`script.html.eex 1`] = `
====================================options=====================================
parsers: ["eex"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<script>
  function m() {
        obj = <% re %>
    return obj + <% 2 %>
  }

  m(  <% r %>)
</script>

=====================================output=====================================
<script>
  function m() {
    obj = <% re %>;
    return obj + <% 2 %>;
  }

  m(<% r %>);
</script>

================================================================================
`;

exports[`script_json.html.eex 1`] = `
====================================options=====================================
parsers: ["eex"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<script type="application/ld+json">
{
  "json": "<%= ew %>",
  "d": <%= ew %>,
}
</script>

=====================================output=====================================
<script type="application/ld+json">
  {
    "json": "<%= ew %>",
    "d": <%= ew %>
  }
</script>

================================================================================
`;

exports[`script_src.html.eex 1`] = `
====================================options=====================================
parsers: ["eex"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<script src="<%= static_url(@conn, "/js/app.js") %>"></script>
<script src="link<%= me %>?param"></script>

=====================================output=====================================
<script src="<%= static_url(@conn, "/js/app.js") %>"></script>
<script src="link<%= me %>?param"></script>

================================================================================
`;
